# face_recognition

./: .gitignore  Dockerfile  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  test_face_via_webcam.py
api-service/: Dockerfile  requirements.txt
api-service/app/: main.py
api-service/app/router/: face_recognition.py  report.py  streaming.py
api-service/app/service/: extract_vector_save_qdrant.py  save_face_to_qdrant.py
api-service/app/utils/: qdrant.py  warmup_model.py
app/: main.py
app/config/: settings.py
app/router/: face_recognition.py  report.py  streaming.py
app/service/: detect_face.py  extract_vector.py  extract_vector_save_qdrant.py  face_recognize.py  fas_model.py  insightface_wrapper.py  resize_img.py  save_face_to_qdrant.py  save_to_postgres.py  upload_r2.py
app/utils/: model.py  model_utils.py  postgres.py  preprocess.py  qdrant.py  warmup_model.py
face_recognize/: align_face.py  config.py  extract_vector.py  face_recognize.py  postgres.py  save_to_postgres.py  upload_r2.py
video-service/: Dockerfile  requirements.txt  stream_reader.py
worker-service/: Dockerfile  celery_app.py  redis_queue.py  requirements.txt  start.sh  tasks.py  worker.py
